--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
 }
 
 button {
-    background-color: #008CBA;
+    background-color: #571845;
     color: #fff;
     border: none;
     padding: 5px 10px;
@@ -37,5 +37,5 @@ button {
 }
 
 button:hover {
-    background-color: #005f6b;
+    background-color: #ffc300;
 }
