--- a/styles.css
+++ b/styles.css
@@ -23,14 +23,14 @@ body {
 }
 
 .product, .cart-item {
-    border: 5px solid #ccc;
+    border: 5px solid #000000;
     padding: 10px;
     margin-bottom: 20px;
 }
 
 button {
     background-color: #571845;
-    color: #fff;
+    color: #ccc;
     border: none;
     padding: 5px 10px;
     cursor: pointer;
